# dnslib-cpp

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
dnslib/: buffer.cpp  buffer.h  dns.h  fakecli.cpp  fakesrv.cpp  message.cpp  message.h  qs.cpp  qs.h  rr.cpp  rr.h  unittests.cpp
